[gd_scene load_steps=11 format=1]

[ext_resource path="res://scenes/Ceia.gd" type="Script" id=1]
[ext_resource path="res://telaInicial/sprites/ceia-final-personagens.png" type="Texture" id=2]
[ext_resource path="res://telaInicial/sprites/2-aps.png" type="Texture" id=3]
[ext_resource path="res://telaInicial/sprites/4aps.png" type="Texture" id=4]
[ext_resource path="res://telaInicial/sprites/3-aps.png" type="Texture" id=5]
[ext_resource path="res://telaInicial/sprites/7aps.png" type="Texture" id=6]
[ext_resource path="res://telaInicial/sprites/10aps.png" type="Texture" id=7]
[ext_resource path="res://telaInicial/sprites/12aps.png" type="Texture" id=8]
[ext_resource path="res://telaInicial/sprites/11aps.png" type="Texture" id=9]
[ext_resource path="res://telaInicial/pixel.fnt" type="BitmapFont" id=10]

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 512.358, 298.141 )
transform/scale = Vector2( 0.881368, 0.876361 )
texture = ExtResource( 2 )

[node name="Button" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 133.0
margin/top = 214.0
margin/right = 240.0
margin/bottom = 347.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Button1" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 221.0
margin/top = 191.0
margin/right = 377.0
margin/bottom = 338.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/hover = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Button2" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 227.0
margin/top = 230.0
margin/right = 319.0
margin/bottom = 354.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/hover = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Button3" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button4" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button5" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button6" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button7" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button8" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 526.0
margin/top = 184.0
margin/right = 748.0
margin/bottom = 364.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/hover = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Button9" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 651.0
margin/top = 183.0
margin/right = 853.0
margin/bottom = 345.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/hover = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Button10" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 877.0
margin/top = 200.0
margin/right = 1015.0
margin/bottom = 367.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/hover = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Button11" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 811.0
margin/top = 203.0
margin/right = 931.0
margin/bottom = 355.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/hover = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Label" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 380.0
margin/top = 298.0
margin/right = 666.0
margin/bottom = 321.0
custom_fonts/font = ExtResource( 10 )
text = "PARABÃ‰NS !!!!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="errou" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 427.0
margin/top = 365.0
margin/right = 625.0
margin/bottom = 388.0
custom_fonts/font = ExtResource( 10 )
text = "Errou!!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


